--- a/220223.md
+++ b/220223.md
@@ -90,7 +90,7 @@ CREATE TABLE DEPARTMENT(
 ```
 
 ### 运行流程:
-1.  先运行234行, 同昨天题目一样分析, 最终第2行SELECT返回ID为[  ]的记录的[    ]字段, 即:
+1.  先运行234行, 同昨天题目一样分析, 最终第2行SELECT返回ID为[ 2,3,4,5,6,7 ]的记录的[ ID,ADDRESS,AGE ]字段, 即:
     2  Texas       25
     3  Norway      23
     4  Rich-Mond   25
@@ -98,12 +98,12 @@ CREATE TABLE DEPARTMENT(
     6  South-Hall  22
     7  Houston     24
 
-2.  INSERT INTO DEPARTMENT, 收到[  ]条记录, 逐一插入新表DEPARTMENT, 即等价于:
+2.  INSERT INTO DEPARTMENT, 收到[ 6 ]条记录, 逐一插入新表DEPARTMENT, 即等价于:
     ```SQL
-    INSERT INTO DEPARTMENT VALUES(2, [  ], [  ]);
-    INSERT INTO DEPARTMENT VALUES(3, [  ], [  ]);
+    INSERT INTO DEPARTMENT VALUES(2, [ 'Texas' ], [ 25 ]);
+    INSERT INTO DEPARTMENT VALUES(3, [ 'Norway' ], [ 23 ]);
     ......
-    INSERT INTO DEPARTMENT VALUES(7, [  ], [  ]);
+    INSERT INTO DEPARTMENT VALUES(7, [ 'Houston' ], [ 24 ]);
     ```
 
 ## 题2
@@ -124,8 +124,22 @@ VALUES (value1, value2);
 ```
 
 ```SQL
+CREATE TABLE COMPANY_3 
+(
+    ID     INT   PRIMARY KEY  NOT NULL,
+    MONEY  INT,
+    NAME   TEXT   NOT NULL
+);
 
+INSERT INTO COMPANY_3 (ID,MONEY,NAME)
+    SELECT ID,SALARY,NAME
+    FROM COMPANY
+    WHERE ADDRESS != 'Texas';
 
+INSERT INTO COMPANY_3 (ID,NAME)
+    SELECT ID,NAME
+    FROM COMPANY
+    WHERE ADDRESS == 'Texas';
 
 
 
